* x.x.x
  - Allow namespaces through protox.generate (thanks to https://github.com/sdrew)

* 1.2.4
  - Fix warning when compiling generated code (thanks to https://github.com/xinz)
  - Format generated code
  - Fix warning about unused variable in generated code when encoding an empty protobuf message

* 1.2.3
  - Update documentation to better explain the package directive usage

* 1.2.2
  - Enable listing of task protox.generate via mix help.

* 1.2.1
  - Add --keep-unknown-fields option to configure support of unknown fields when generating files

* 1.2.0
  - Add keep_unknown_fields option to configure support of unknown fields

* 1.1.1
  - Fix documentation links

* 1.1.0
  - Add ability to generate one file per protobuf message to speed up compilation (thanks to https://github.com/qgau)

* 1.0.0
  - Use Protox exceptions as errors codes

* 0.25.0
  - Add mix task to generate files
  - Bump to Elixir 1.7 as minimal supported version

* 0.24.0
  - Usage of @external_resource is no longer necessary

* 0.23.1
  - Fix parse of [packed=false] option (the serialization was still correct,
    but not in compliance with Protobuf conformance checker recommandations)

* 0.23.0
  - [Breaking change] encode/1 returns a tuple, use encode!/1 to get the old
    behavior of encode/1
  - Raise RequiredFieldsError when encoding or decoding a Protobuf 2 message
    with unset required fields (that is, that have the value `nil`)
  - Raise IllegalTagError when decoding a message with a tag set to 0
  - +40% speedup & -30% memory consumption when decoding thanks to macro
  - Fix missing encoding of unknown fields when a message hadn't any field

* 0.22.0
  - O(1) encoding of oneof fields

* 0.21.0
  - Move back to ahamez/protox
  - Bump to Elixir 1.6 as minimal supported version
  - Add benchmarks
  - Add conformance tests to CI
  - Add dialyzer to CI

* 0.20.0
  - Pass all tests of protobuf 3.12 conformance suite tests
  - (proto2) Always serialize required fields