@@ -1,5 +1,6 @@
 * x.x.x
   - Allow namespaces through protox.generate (thanks to https://github.com/sdrew)
+  - Expand output path when generating files
 
 * 1.2.4
   - Fix warning when compiling generated code (thanks to https://github.com/xinz)
